--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "oss-sdgs",
   "version": "0.2.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Sustainable Development Goals sharing tool",
+  "main": "build/index.js",
   "repository": "https://github.com/bbugh/oss-sdgs",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
     "babel-preset-react": "^6.5.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "babel src --presets react --out-dir build --watch",
+    "build": "babel src --presets react --out-dir build"
   },
-  "author": "",
+  "author": "bbugh",
   "license": "ISC"
 }
